Refactor intersection handling in geometric classes; update AmbientLight and Camera constructors; enhance Color and Scene classes